# ROSSwarm

./: .gitignore  Makefile  README.md  local_env.sh
ros2_ws/: README.md
ros2_ws/src/drone_control_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/drone_control_pkg/launch/: drone_control.launch.py
ros2_ws/src/drone_control_pkg/src/: simple_drone_monitor.cpp  test_flight.cpp
scripts/: bootstrap.sh  gz.sh  install_local_deps.sh  mavproxy.sh  run_gazebo.sh  run_iris_sim.sh  run_sitl.sh  sitl.sh  stop_all.sh
worlds/: empty_world.sdf  iris_runway.sdf
